--- a/src/components/Products/index.css
+++ b/src/components/Products/index.css
@@ -7,7 +7,9 @@
 
 .button {
   border: none;
-  padding: 30px;
+  padding: 20px 30px;
+  border-radius: 50px;
+  margin: 20px;
   background-color: black;
   color: white;
   cursor: pointer;
